[package]
name = "swaybar-proc-graph"
version = "0.2.1"
authors = ["vjoki"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
argh = "0.1"
nvml-wrapper = { version = "0.9", optional = true }
once_cell = { version = "1.16", optional = true }

[features]
default = ["nvidia"]
nvidia = ["dep:nvml-wrapper", "dep:once_cell"]
